--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -71,22 +71,57 @@
         </video>
       </div>
     </div>
-     <div class="demo__plataform-numbers">
-       <b><%= @events_count %></b> eventos e atividades de <b><%= @organizers_count %></b> organizadores estão disponíveis hoje
-       <br>
+    <div class="demo__plataform-numbers">
+      <b><%= @events_count %></b> eventos e atividades de
+      <b><%= @organizers_count %></b> organizadores estão disponíveis hoje
+      <br>
     </div>
   </section>
 
-  <!-- <section>
-    <div class="befefits">
-      <div class="benefit">Filtre por dia, categoria e tipo facilmente.</div>
-      <div class="benefit">Filtre por dia, categoria e tipo facilmente.</div>
-      <div class="benefit">Filtre por dia, categoria e tipo facilmente.</div>
-      <div class="benefit">Filtre por dia, categoria e tipo facilmente.</div>
-      <div class="benefit">Filtre por dia, categoria e tipo facilmente.</div>
-      <div class="benefit">Filtre por dia, categoria e tipo facilmente.</div>
+  <section class="benefits">
+    <div class="benefits__items">
+      <div class="benefits__item">
+        <input type="checkbox" id="scales" name="scales" checked="true">
+        <h3>Filtre eventos por dia, categoria e tipo</h3>
+        <span>Ex: sexta-feira > festas > evento de rua</span>
+      </div>
+      <div class="benefits__item">
+        <input type="checkbox" id="scales" name="scales" checked="true">
+        <h3>Mostrar eventos similares em um clique</h3>
+        <span>Ex: ver similares à "Festa Goodbye Lenin"</span>
+      </div>
+      <div class="benefits__item">
+        <input type="checkbox" id="scales" name="scales" checked="true">
+        <h3>Seguir os tópicos que você gosta</h3>
+        <span>Ex: seguir os tópicos "Feiras de rua" e "Brechó"</span>
+      </div>
+      <div class="benefits__item">
+        <input type="checkbox" id="scales" name="scales" checked="true">
+        <h3>Seguir organizadores</h3>
+        <span>Ex: seguir os organizadores "Coletivo Plano" e "No Palco"</span>
+      </div>
+      <div class="benefits__item">
+        <input type="checkbox" id="scales" name="scales" checked="true">
+        <h3>Recomendações específicas para você</h3>
+        <span>Aprendemos continuamente o seu gosto individual</span>
+      </div>
+      <div class="benefits__item">
+        <input type="checkbox" id="scales" name="scales" checked="true">
+        <h3>Seguir locais</h3>
+        <span>Ex: seguir os locais "Opnião" e "Mario Quintana"</span>
+      </div>
+      <div class="benefits__item">
+        <input type="checkbox" id="scales" name="scales">
+        <h3>Filmes em cartaz nos cinemas</h3>
+        <span>Ex: ver lista de filmes no "Capitólio" e "Cinemark"</span>
+      </div>
+      <div class="benefits__item">
+        <input type="checkbox" id="scales" name="scales">
+        <h3>Compartilhar minha agenda</h3>
+        <span>Ex: compartilha seu perfil com "amigos", "trabalho" e "família"</span>
+      </div>
     </div>
-  </section> -->
+  </section>
 
   <section class="invite">
     <div class="invite__status">
@@ -103,9 +138,14 @@
         <i title="Versão de testes do aplicativo ainda em desenvolvimento e validações">beta</i> vamos liberar até 100 convites por semana
       </div>
     </div>
-    <button class="shareBtn shareBtn--invite mdc-fab mdc-fab--extended" aria-label="Compartilhar" style="">
-      <i class="mdc-fab__icon material-icons"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92-1.31-2.92-2.92-2.92z"/></svg></i>
-      <span class="mdc-fab__label">Compartilhar</span>
+    <button class="shareBtn shareBtn--invite " aria-label="Compartilhar" style="">
+      <i class="">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+          <path fill="none" d="M0 0h24v24H0V0z"/>
+          <path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92-1.31-2.92-2.92-2.92z"/>
+        </svg>
+      </i>
+      <span class="">Compartilhar</span>
     </button>
     <div class="invite__cta" title="Seja um Beta tester!">
       Solicitar Convite
@@ -120,6 +160,20 @@
     </div>
   </section>
 
+  <% unless mobile_device? %>
+    <section class="manifesto">
+      <i>Manifesto</i>
+      <h2>Aumentar a interação das pessoas com a cidade</h2>
+      <div class="manifesto__content">
+        <p>Você é o que você come. Quantas vezes você já ouviu esta frase? Com certeza algumas vezes. Mas somos mais ainda o resultado daquilo que vivemos, com as pessoas que interagimos!</p>
+        <p>O mundo já foi um lugar pacato, poucas coisas aconteciam a nossa volta, e não muito raramente as cidades possuíam pouca diversidade de eventos e atividades. Houve um tempo que os grandes acontecimentos da nossa sociedade eram a missa, o casamento e a festa anual da cidade.</p>
+        <p>Por isso talvez as pessoas eram tão iguais, previsíveis e havia pouca inovação...</p>
+        <a href="https://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" target="_blank" class="manifesto__read-more">LER MAIS</a>
+      </div>
+    </section>
+  <% end %>
+
+
   <section class="social">
     <h2>Siga o alegreme</h2>
     <div class="social__buttons">
@@ -132,15 +186,6 @@
     </div>
   </section>
 
-  <section class="manifesto">
-    <h2>Aumentando a interação entre as pessoas para criarmos cidades incríveis!</h2>
-    <div class="manifesto__content">
-      <p>Você é o que você come. Quantas vezes você já ouviu esta frase? Com certeza algumas vezes. Mas somos mais ainda o resultado daquilo que vivemos, com as pessoas que interagimos!</p>
-      <p>O mundo já foi um lugar pacato, poucas coisas aconteciam a nossa volta, e não muito raramente as cidades possuíam pouca diversidade de eventos e atividades. Houve um tempo que os grandes acontecimentos da nossa sociedade eram a missa, o casamento e a festa anual da cidade.</p>
-      <p>Por isso talvez as pessoas eram tão iguais, previsíveis e havia pouca inovação.</p>
-      <a href="https://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" target="_blank"  class="manifesto__read-more">LER MAIS</a>
-    </div>
-  </section>
 
   <section class="questions">
     <h2>Perguntas?</h2>
@@ -190,7 +235,7 @@
           com base em mais de 10 variáveis; outro é responsável a entender os grupos de usuários que usam o app
           e do que gostam e não gostam e organizar para cada pessoa coleções com sugestões, como o Youtube e Netflix fazem.
         <p>
-          Podemos dizer que o Alegreme é poliglota e hypado, vai do Python ao Javascript, do Ruby ao Java, utiliza inteligência artificial e chatbots, tudo isso para entregar um app massa!
+          Podemos dizer que o Alegreme é poliglota e hypado, vai do Python ao Javascript, do Ruby ao Java, utiliza inteligência artificial e bots, tudo isso para entregar um app massa!
         </p>
         </p>
       </div>
@@ -220,14 +265,19 @@
         <%= responsive_image_tag "welcome/footer-logo-icon", alt: 'logo', title: 'Pimba!', class: 'lazyload' %>
         <div class="brand__pimba js-pimba" style="opacity: 0;">Pimba</div>
       </div>
-      <button class="shareBtn mdc-fab mdc-fab--extended" aria-label="Compartilhar" style="">
-        <i class="mdc-fab__icon material-icons"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92-1.31-2.92-2.92-2.92z"/></svg></i>
-        <span class="mdc-fab__label">Compartilhar</span>
+      <button class="shareBtn" aria-label="Compartilhar" style="">
+        <i class="">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path fill="none" d="M0 0h24v24H0V0z"/>
+            <path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92-1.31-2.92-2.92-2.92z"/>
+          </svg>
+        </i>
+        <span class="">Compartilhar</span>
       </button>
       <div class="social__links">
-<!--        <a href="https://www.instagram.com/portoalegreme" >instagram</a> ·-->
-<!--        <a href="https://twitter.com/portoalegreme" >twitter</a> ·-->
-        <a href="#" >oi@alegreme.com</a>
+        <!--        <a href="https://www.instagram.com/portoalegreme" >instagram</a> ·-->
+        <!--        <a href="https://twitter.com/portoalegreme" >twitter</a> ·-->
+        <a href="#">oi@alegreme.com</a>
       </div>
       <div class="footer__links">
         <a href="/privacy">Política de privacidade</a>
