--- a/web/app/assets/stylesheets/welcome/fcp.scss
+++ b/web/app/assets/stylesheets/welcome/fcp.scss
@@ -137,7 +137,7 @@ section {
 
 .feature {
   background: #FFFFFF;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
   border-radius: 6px;
   width: 226px;
   height: 110px;
