--- a/web/app/assets/stylesheets/components/me-feed.scss
+++ b/web/app/assets/stylesheets/components/me-feed.scss
@@ -113,6 +113,23 @@ $mdc-layout-grid-columns: (
       display: none;
     }
 
+    &--mobile {
+      @include mdc-layout-grid-media-query_("phone") {
+        order: 1000;
+        display: block;
+        & svg {
+          padding: 12px;
+          border: 1px solid $border-color;
+          border-radius: 35px;
+          width: 34px;
+          height: 34px;
+          fill: $font-secondary-color;
+          position: relative;
+          left: -30px;
+        }
+      }
+    }
+
     & .mdc-button {
       font-family: $font-secondary-family;
       font-size: 12px;
@@ -213,7 +230,7 @@ $mdc-layout-grid-columns: (
 
     @include mdc-layout-grid-media-query_("phone") {
       grid-gap: var(--mdc-layout-grid-gutter-desktop, 15px);
-      grid-template-columns: repeat(20, minmax(60vw, 1fr));
+      grid-template-columns: repeat(100, minmax(60vw, 1fr));
       overflow-y: hidden;
       padding: 0 $section-padding-phone;
     }
