--- a/web/app/assets/stylesheets/components/me-saves.scss
+++ b/web/app/assets/stylesheets/components/me-saves.scss
@@ -5,14 +5,13 @@
 $gutter: 6px;
 
 .me-saves {
-  position: relative;
-  //margin-bottom: 50px;
-  //padding: 35px 0 70px 0;
-  //background: $background-z0-color;
-  //@include section-constraints;
+  margin: auto;
+  padding: 0 0 25px 0;
+  max-width: 960px;
   @include mdc-layout-grid-media-query_("phone") {
-    //display: none;
-    margin: 25px 0;
+    max-width: unset;
+    padding: 35px 0 35px 0;
+    //border-bottom: 1px solid $border-color;
   }
 
   &__list {
