--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 
   <title><%= meta_title %></title>
 
-  <meta name="theme-color" content="#5ecf80"/>
+  <meta name="theme-color" content="#ffffff"/>
   <meta name="viewport"
         content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
