--- a/web/app/assets/stylesheets/components/me-saves.scss
+++ b/web/app/assets/stylesheets/components/me-saves.scss
@@ -8,10 +8,10 @@ $gutter: 6px;
   margin: auto;
   padding: 0 0 25px 0;
   max-width: 960px;
+  position: relative;
   @include mdc-layout-grid-media-query_("phone") {
     max-width: unset;
     padding: 35px 0 35px 0;
-    //border-bottom: 1px solid $border-color;
   }
 
   &__list {
