Fix in load similar at places and organizers page

--- a/web/app/assets/stylesheets/components/me-feed.scss
+++ b/web/app/assets/stylesheets/components/me-feed.scss
@@ -54,7 +54,7 @@ $mdc-layout-grid-columns: (
         font-family: $font-secondary-family;
         color: $font-secondary-color;
         line-height: 1.6em;
-        margin-top: 8px;
+        //margin-top: 8px;
         @include mdc-layout-grid-media-query_("phone") {
           display: none;
         }
