--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -13,6 +13,10 @@
     width: auto;
     padding: 6px 0;
     margin: 0 12px 35px 12px;
+    .me-page--profile__section & {
+      grid-column: 4 span;
+      margin: 0 0 35px 0;
+    }
   }
 
 
