--- a/web/app/views/components/collection/_collection.html.erb
+++ b/web/app/views/components/collection/_collection.html.erb
@@ -82,7 +82,7 @@
             events:       items[:events],
             identifier:   identifier,
             json_request: json_request
-        } unless mobile_device? %>
+        } if !mobile_device? || ['places', 'organizers'].include?(params[:controller])%>
 
         <% if actual_events_in_collection < total_events_in_collection && mobile_device? %>
           <div class="me-feed__load-more me-feed__load-more--mobile"
@@ -106,7 +106,7 @@
     <%= render partial: 'components/collection/similar', locals: {
         events:     items[:events],
         identifier: identifier
-    } if mobile_device? %>
+    } if mobile_device? && !['places', 'organizers'].include?(params[:controller])  %>
     <% if actual_events_in_collection < total_events_in_collection %>
       <div class="me-feed__load-more"
            data-action="click->section#loadMore"
