Fine tuning in scroll without jank

--- a/web/app/views/collections/index.js.erb
+++ b/web/app/views/collections/index.js.erb
@@ -4,13 +4,15 @@
 	const promise = new Promise(function (resolve, reject) {
 		const sectionElem = document.getElementById('<%= @locals[:identifier] %>');
 
-		const morph = morphdom.default(sectionElem, '<%= j render partial: "components/collection/collection", locals: @locals %>'.trim(), {
-			onBeforeElUpdated: function (fromEl, toEl) {
-				return !fromEl.isEqualNode(toEl);
-			}
-		});
+		requestIdleCallback(function () {
+			const morph = morphdom.default(sectionElem, '<%= j render partial: "components/collection/collection", locals: @locals %>'.trim(), {
+				onBeforeElUpdated: function (fromEl, toEl) {
+					return !fromEl.isEqualNode(toEl);
+				}
+			});
 
-		resolve(morph)
+			resolve(morph)
+		});
 	})
 
 	promise.then(function (value) {
