--- a/web/app/assets/stylesheets/components/me-float-menu.scss
+++ b/web/app/assets/stylesheets/components/me-float-menu.scss
@@ -17,7 +17,7 @@
     height: 100vh;
     width: 60px;
     background: #f7f7f7;
-    touch-action: none;
+    //touch-action: none;
     box-shadow: inset 0 0 6px #ececec, 1px 0 6px #ffffff85;
   }
 
@@ -57,6 +57,7 @@
     align-items: center;
     opacity: 0;
     transition: opacity 0.2s ease-in;
+    will-change: opacity, display, color, transform;
 
     &.is-active {
       color: $brand-color;
