--- a/web/app/views/follow/chip-set.js.erb
+++ b/web/app/views/follow/chip-set.js.erb
@@ -2,10 +2,12 @@
 	let chipEventElem = document.getElementById('<%= "follow-chip-set__#{@locals[:type]}-#{@locals[:event_id]}" %>');
 
 	setTimeout(function () {
-		morphdom.default(chipEventElem, '<%= j render(partial: 'components/follow/follow-chip-set', locals: @locals) %>'.trim(), {
-			onBeforeElUpdated: function (fromEl, toEl) {
-		    return !fromEl.isEqualNode(toEl);
-			}
-		})
+		requestIdleCallback(function (){
+      morphdom.default(chipEventElem, '<%= j render(partial: 'components/follow/follow-chip-set', locals: @locals) %>'.trim(), {
+        onBeforeElUpdated: function (fromEl, toEl) {
+          return !fromEl.isEqualNode(toEl);
+        }
+      })
+	})
 	}, 250)
 })()
