--- a/web/app/views/users/_form.html.erb
+++ b/web/app/views/users/_form.html.erb
@@ -1,3 +1,6 @@
+<%= javascript_pack_tag ['mdc-select', 'mdc-textfield'], 'data-turbolinks-track': 'reload', defer: true %>
+
+
 <%= form_with(model: user, local: true) do |form| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
