Adjust in webpack

--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
   <%= Gon::Base.render_data %>
 
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
-  <%= javascript_pack_tag 'feed', 'data-turbolinks-track': 'reload', defer: true %>
+  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   <%#= javascript_pack_tag 'train', 'data-turbolinks-track': 'reload', defer: true if params[:action] == 'train' %>
 
 </head>
