--- a/web/app/views/events/_form.html.erb
+++ b/web/app/views/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_pack_tag ['mdc-select', 'mdc-textfield'], 'data-turbolinks-track': 'reload', defer: true %>
+<%= javascript_pack_tag 'events', 'data-turbolinks-track': 'reload', defer: true %>
 
 <%= form_with(model: event, local: true) do |form| %>
 <% if event.errors.any? %>
